Update 'backend-tests-go-hyxotjoj' component image to: quay.io/rhtap_qe/backend-tests-go-hyxotjoj:fb3738506e0f512a63dd6af9bac8fbd8e34d053b@sha256:66c8ea3db372821feb5f9736ba8fb74a869b01e1e4e905be79452c4f2adf76c3

--- a/components/backend-tests-go-hyxotjoj/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-hyxotjoj/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-hyxotjoj
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-hyxotjoj:fb3738506e0f512a63dd6af9bac8fbd8e34d053b@sha256:66c8ea3db372821feb5f9736ba8fb74a869b01e1e4e905be79452c4f2adf76c3
+          name: container-image
